fixing resume text size and spacing

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -52,7 +52,7 @@
   align-items: center;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 11;
+  font-size: 11pt;
   line-height: 100%;
   background-color: white;
   max-width: 816px;
@@ -70,6 +70,12 @@
 .resume-content > p,
 .resume-content > ul {
   margin-block: 0;
+}
+
+.resume-content > p,
+.resume-content > ul > li {
+  font-size: 11pt;
+  line-height: 1.3;
 }
 
 .name {
